--- a/Oripresso/Base.lproj/OrderList.storyboard
+++ b/Oripresso/Base.lproj/OrderList.storyboard
@@ -41,28 +41,81 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="totalBar" translatesAutoresizingMaskIntoConstraints="NO" id="MuM-cZ-oTu">
-                                <rect key="frame" x="8" y="640" width="377" height="92"/>
-                            </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="location_pay" translatesAutoresizingMaskIntoConstraints="NO" id="gzL-eV-b3B">
                                 <rect key="frame" x="52.666666666666657" y="768" width="288" height="50"/>
                             </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uHy-GQ-piz" userLabel="주문하기 바">
+                                <rect key="frame" x="0.0" y="640" width="393" height="92"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Pob-mA-ZPB">
+                                        <rect key="frame" x="10" y="10" width="373" height="72"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nt4-Db-oQY" userLabel="수량 및 가격">
+                                                <rect key="frame" x="0.0" y="0.0" width="117.66666666666667" height="72"/>
+                                                <subviews>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="cWj-wd-dkG">
+                                                        <rect key="frame" x="20.666666666666664" y="10.666666666666625" width="76.333333333333343" height="50.666666666666657"/>
+                                                        <subviews>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="총     03 개" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z4d-Vh-h4W">
+                                                                <rect key="frame" x="0.0" y="0.0" width="76.333333333333329" height="20.333333333333332"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                <nil key="textColor"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="13,500₩" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cfA-SR-4Il">
+                                                                <rect key="frame" x="0.0" y="30.333333333333371" width="76.333333333333329" height="20.333333333333329"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                <nil key="textColor"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                        </subviews>
+                                                    </stackView>
+                                                </subviews>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstItem="cWj-wd-dkG" firstAttribute="centerY" secondItem="nt4-Db-oQY" secondAttribute="centerY" id="fAi-6H-0Ob"/>
+                                                    <constraint firstItem="cWj-wd-dkG" firstAttribute="centerX" secondItem="nt4-Db-oQY" secondAttribute="centerX" id="l0I-X9-lqY"/>
+                                                </constraints>
+                                            </view>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gYf-m3-SxC">
+                                                <rect key="frame" x="127.66666666666666" y="0.0" width="117.66666666666666" height="72"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="filled" title="주문취소"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wbm-2I-rXt">
+                                                <rect key="frame" x="255.33333333333329" y="0.0" width="117.66666666666666" height="72"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="filled" title="주문하기"/>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="92" id="G4W-1L-beg"/>
+                                    <constraint firstItem="Pob-mA-ZPB" firstAttribute="top" secondItem="uHy-GQ-piz" secondAttribute="top" constant="10" id="SPX-kb-fGE"/>
+                                    <constraint firstAttribute="bottom" secondItem="Pob-mA-ZPB" secondAttribute="bottom" constant="10" id="XyR-kv-Ha7"/>
+                                    <constraint firstItem="Pob-mA-ZPB" firstAttribute="leading" secondItem="uHy-GQ-piz" secondAttribute="leading" constant="10" id="g0c-zJ-MoW"/>
+                                    <constraint firstAttribute="trailing" secondItem="Pob-mA-ZPB" secondAttribute="trailing" constant="10" id="wGk-Ve-hP7"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.96078431372549022" green="0.97254901960784312" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Q5X-m2-Rc2" firstAttribute="top" secondItem="ai6-nJ-kFM" secondAttribute="bottom" constant="5" id="0gl-LS-JSB"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YLQ-WT-Ogc" secondAttribute="trailing" id="2IP-Ft-4ek"/>
-                            <constraint firstItem="MuM-cZ-oTu" firstAttribute="centerX" secondItem="YLQ-WT-Ogc" secondAttribute="centerX" id="CYW-pO-W0d"/>
                             <constraint firstItem="gzL-eV-b3B" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="DcR-ka-yHE"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="gzL-eV-b3B" secondAttribute="bottom" id="G46-QT-AuU"/>
+                            <constraint firstItem="uHy-GQ-piz" firstAttribute="top" secondItem="YLQ-WT-Ogc" secondAttribute="bottom" constant="10" id="Gc0-yw-6KN"/>
                             <constraint firstItem="ai6-nJ-kFM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="PoB-sY-0hs"/>
                             <constraint firstItem="Q5X-m2-Rc2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Vtr-1H-nKJ"/>
-                            <constraint firstItem="MuM-cZ-oTu" firstAttribute="top" secondItem="YLQ-WT-Ogc" secondAttribute="bottom" constant="10" id="XuC-77-IUw"/>
+                            <constraint firstItem="uHy-GQ-piz" firstAttribute="leading" secondItem="YLQ-WT-Ogc" secondAttribute="leading" id="cVH-d6-Avt"/>
                             <constraint firstItem="ai6-nJ-kFM" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="gyx-Vu-MqS"/>
                             <constraint firstItem="YLQ-WT-Ogc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="hJW-Vm-jrN"/>
+                            <constraint firstItem="gzL-eV-b3B" firstAttribute="top" secondItem="uHy-GQ-piz" secondAttribute="bottom" constant="36" id="m1o-rp-WYz"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Q5X-m2-Rc2" secondAttribute="trailing" id="mLs-PJ-0OY"/>
-                            <constraint firstItem="gzL-eV-b3B" firstAttribute="top" secondItem="MuM-cZ-oTu" secondAttribute="bottom" constant="36" id="tFj-ID-aAJ"/>
+                            <constraint firstItem="uHy-GQ-piz" firstAttribute="trailing" secondItem="YLQ-WT-Ogc" secondAttribute="trailing" id="rwN-BS-WbF"/>
                             <constraint firstItem="YLQ-WT-Ogc" firstAttribute="top" secondItem="Q5X-m2-Rc2" secondAttribute="bottom" id="vcs-6j-BcW"/>
                         </constraints>
                     </view>
@@ -77,7 +130,6 @@
         <image name="OripressoTitle" width="182" height="50"/>
         <image name="location_pay" width="288" height="50"/>
         <image name="titleBar" width="393" height="38"/>
-        <image name="totalBar" width="377" height="92"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
