--- a/Oripresso/Base.lproj/OrderList.storyboard
+++ b/Oripresso/Base.lproj/OrderList.storyboard
@@ -27,6 +27,9 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="titleBar" translatesAutoresizingMaskIntoConstraints="NO" id="Q5X-m2-Rc2">
                                 <rect key="frame" x="0.0" y="114" width="393" height="38"/>
                             </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="orderListTitleText" translatesAutoresizingMaskIntoConstraints="NO" id="3zz-94-nRC">
+                                <rect key="frame" x="165" y="122" width="62" height="22"/>
+                            </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="YLQ-WT-Ogc" userLabel="주문내역 테이블">
                                 <rect key="frame" x="0.0" y="152" width="393" height="478"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -41,9 +44,6 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="location_pay" translatesAutoresizingMaskIntoConstraints="NO" id="gzL-eV-b3B">
-                                <rect key="frame" x="52.666666666666657" y="768" width="288" height="50"/>
-                            </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uHy-GQ-piz" userLabel="주문하기 바">
                                 <rect key="frame" x="0.0" y="640" width="393" height="92"/>
                                 <subviews>
@@ -54,16 +54,16 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="117.66666666666667" height="72"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="cWj-wd-dkG">
-                                                        <rect key="frame" x="20.666666666666664" y="10.666666666666625" width="76.333333333333343" height="50.666666666666657"/>
+                                                        <rect key="frame" x="34.666666666666671" y="10.666666666666625" width="48.666666666666671" height="50.666666666666657"/>
                                                         <subviews>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="총     03 개" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z4d-Vh-h4W">
-                                                                <rect key="frame" x="0.0" y="0.0" width="76.333333333333329" height="20.333333333333332"/>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="총 개수" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z4d-Vh-h4W">
+                                                                <rect key="frame" x="0.0" y="0.0" width="48.666666666666664" height="20.333333333333332"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="13,500₩" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cfA-SR-4Il">
-                                                                <rect key="frame" x="0.0" y="30.333333333333371" width="76.333333333333329" height="20.333333333333329"/>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="₩" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cfA-SR-4Il">
+                                                                <rect key="frame" x="0.0" y="30.333333333333371" width="48.666666666666664" height="20.333333333333329"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
@@ -79,11 +79,13 @@
                                             </view>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gYf-m3-SxC">
                                                 <rect key="frame" x="127.66666666666666" y="0.0" width="117.66666666666666" height="72"/>
+                                                <color key="tintColor" systemColor="systemGray2Color"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="filled" title="주문취소"/>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wbm-2I-rXt">
                                                 <rect key="frame" x="255.33333333333329" y="0.0" width="117.66666666666666" height="72"/>
+                                                <color key="tintColor" systemColor="systemGreenColor"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="filled" title="주문하기"/>
                                             </button>
@@ -99,12 +101,16 @@
                                     <constraint firstAttribute="trailing" secondItem="Pob-mA-ZPB" secondAttribute="trailing" constant="10" id="wGk-Ve-hP7"/>
                                 </constraints>
                             </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="location_pay" translatesAutoresizingMaskIntoConstraints="NO" id="gzL-eV-b3B">
+                                <rect key="frame" x="52.666666666666657" y="768" width="288" height="50"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.96078431372549022" green="0.97254901960784312" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Q5X-m2-Rc2" firstAttribute="top" secondItem="ai6-nJ-kFM" secondAttribute="bottom" constant="5" id="0gl-LS-JSB"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YLQ-WT-Ogc" secondAttribute="trailing" id="2IP-Ft-4ek"/>
+                            <constraint firstItem="3zz-94-nRC" firstAttribute="centerX" secondItem="Q5X-m2-Rc2" secondAttribute="centerX" id="CQB-i6-05n"/>
                             <constraint firstItem="gzL-eV-b3B" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="DcR-ka-yHE"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="gzL-eV-b3B" secondAttribute="bottom" id="G46-QT-AuU"/>
                             <constraint firstItem="uHy-GQ-piz" firstAttribute="top" secondItem="YLQ-WT-Ogc" secondAttribute="bottom" constant="10" id="Gc0-yw-6KN"/>
@@ -117,6 +123,7 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Q5X-m2-Rc2" secondAttribute="trailing" id="mLs-PJ-0OY"/>
                             <constraint firstItem="uHy-GQ-piz" firstAttribute="trailing" secondItem="YLQ-WT-Ogc" secondAttribute="trailing" id="rwN-BS-WbF"/>
                             <constraint firstItem="YLQ-WT-Ogc" firstAttribute="top" secondItem="Q5X-m2-Rc2" secondAttribute="bottom" id="vcs-6j-BcW"/>
+                            <constraint firstItem="3zz-94-nRC" firstAttribute="centerY" secondItem="Q5X-m2-Rc2" secondAttribute="centerY" id="xcO-BQ-WnX"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Title" id="5Qi-f2-2H1" userLabel="Back"/>
@@ -129,9 +136,16 @@
     <resources>
         <image name="OripressoTitle" width="182" height="50"/>
         <image name="location_pay" width="288" height="50"/>
+        <image name="orderListTitleText" width="61" height="17"/>
         <image name="titleBar" width="393" height="38"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
