--- a/Oripresso/OrderList.storyboard
+++ b/Oripresso/OrderList.storyboard
@@ -68,6 +68,9 @@
                                                             </constraints>
                                                             <state key="normal" title="Button"/>
                                                             <buttonConfiguration key="configuration" style="plain" image="minus"/>
+                                                            <connections>
+                                                                <action selector="tapMinusButton:" destination="R3A-Xl-qin" eventType="touchUpInside" id="xno-bp-FhM"/>
+                                                            </connections>
                                                         </button>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VI3-ox-IB9" userLabel="plusButton">
                                                             <rect key="frame" x="76" y="3.6666666666666679" width="18" height="19"/>
@@ -77,6 +80,9 @@
                                                             </constraints>
                                                             <state key="normal" title="Button"/>
                                                             <buttonConfiguration key="configuration" style="plain" image="plus"/>
+                                                            <connections>
+                                                                <action selector="tapPlusButton:" destination="R3A-Xl-qin" eventType="touchUpInside" id="iC2-rO-MDO"/>
+                                                            </connections>
                                                         </button>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="개수" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ngj-jt-qa5">
                                                             <rect key="frame" x="35" y="4.6666666666666679" width="24.333333333333329" height="17"/>
