--- a/Oripresso/OrderList.storyboard
+++ b/Oripresso/OrderList.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="PBo-eF-dzn">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -248,6 +248,8 @@
                     <navigationItem key="navigationItem" title="Title" id="tzi-nx-qRZ" userLabel="Back"/>
                     <connections>
                         <outlet property="orderListTableView" destination="oON-EB-EB5" id="ycZ-Ua-BQE"/>
+                        <outlet property="totalPriceLabel" destination="YSR-qo-fKI" id="hlB-3A-7Fz"/>
+                        <outlet property="totalQuantityLabel" destination="5SF-je-ETF" id="4Fg-f0-nvu"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x40-TG-Bmn" sceneMemberID="firstResponder"/>
