--- a/Oripresso/Fonts/CollectionViewCell.xib
+++ b/Oripresso/Fonts/CollectionViewCell.xib
@@ -17,42 +17,35 @@
                 <rect key="frame" x="0.0" y="0.0" width="77" height="105"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bf2-BI-KUX">
-                        <rect key="frame" x="0.0" y="0.0" width="77" height="77"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="🤧" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mxu-lU-hsc">
-                                <rect key="frame" x="24" y="23" width="28" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="trailing" secondItem="mxu-lU-hsc" secondAttribute="trailing" constant="25" id="2xE-DI-gDd"/>
-                            <constraint firstItem="mxu-lU-hsc" firstAttribute="leading" secondItem="Bf2-BI-KUX" secondAttribute="leading" constant="24" id="eb0-ei-s7L"/>
-                            <constraint firstItem="mxu-lU-hsc" firstAttribute="top" secondItem="Bf2-BI-KUX" secondAttribute="top" constant="23" id="xPv-VL-Yyf"/>
-                        </constraints>
-                    </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="🤧" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mxu-lU-hsc">
+                        <rect key="frame" x="24" y="24" width="28" height="30"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="49Y-oR-p9V">
                         <rect key="frame" x="21" y="82" width="36" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fKJ-4Q-u1X">
+                        <rect key="frame" x="0.0" y="0.0" width="77" height="77"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    </imageView>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
+                <constraint firstAttribute="trailing" secondItem="mxu-lU-hsc" secondAttribute="trailing" constant="25" id="6cz-Z6-xEP"/>
                 <constraint firstItem="49Y-oR-p9V" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="21" id="AH2-cW-YuS"/>
-                <constraint firstItem="Bf2-BI-KUX" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Sz9-EV-Dbz"/>
-                <constraint firstItem="49Y-oR-p9V" firstAttribute="top" secondItem="Bf2-BI-KUX" secondAttribute="bottom" constant="5" id="ZDC-oe-5aU"/>
+                <constraint firstItem="mxu-lU-hsc" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="24" id="Ja5-jB-xUP"/>
                 <constraint firstAttribute="trailing" secondItem="49Y-oR-p9V" secondAttribute="trailing" constant="20" id="dsK-x3-PaM"/>
                 <constraint firstAttribute="bottom" secondItem="49Y-oR-p9V" secondAttribute="bottom" constant="6" id="kQy-gr-YgR"/>
-                <constraint firstItem="Bf2-BI-KUX" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="wgy-fD-XDl"/>
+                <constraint firstItem="mxu-lU-hsc" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="24" id="xFx-Ga-9Lq"/>
             </constraints>
             <connections>
-                <outlet property="Background" destination="Bf2-BI-KUX" id="kaU-PM-2TS"/>
+                <outlet property="Background" destination="fKJ-4Q-u1X" id="D1u-sC-1pt"/>
                 <outlet property="emoji" destination="mxu-lU-hsc" id="FFP-Xy-Zg5"/>
                 <outlet property="name" destination="49Y-oR-p9V" id="s5O-Re-ok4"/>
             </connections>
